# fred-llm

./: .env.sample  .gitignore  .gitmodules  CLAUDE.md  README.md  README.md.backup  config.yaml  pyproject.toml  uv.config.json
.github/: copilot-instructions.md
.mcp-debug-tools/: config.json
configs/: README.md  default.yaml  development.yaml  diverse_21_gpt4o.yaml  diverse_21_gpt4omini.yaml  diverse_21_gpt4omini_agentic.yaml  diverse_21_gpt52.yaml  diverse_21_gpt54.yaml  diverse_21_gpt54_agentic.yaml  diverse_21_gpt54mini.yaml  diverse_21_gpt54mini_agentic.yaml  diverse_21_gpt55.yaml  diverse_21_gpt55_agentic.yaml  diverse_21_prepare.yaml  diverse_test.yaml  eval_only.yaml  fine_tuning.yaml  local.yaml  openrouter.yaml  pilot8_gpt54mini_code.yaml  pilot8_gpt54mini_code_exec.yaml  prepare_data.yaml  production.yaml  run_inference.yaml  sample_2_per_type.yaml  sample_test_10.yaml  sample_test_10_gpt4o.yaml  sample_test_10_gpt52.yaml  stratified_sample.yaml  template.yaml  test_100.yaml  test_100_gpt4o.yaml  test_100_gpt4omini.yaml  test_100_gpt52.yaml  test_100_gpt54_router.yaml  test_100_gpt54_router_agentic.yaml  test_100_gpt54mini_router.yaml  test_100_gpt54mini_router_agentic.yaml  test_100_gpt55_router.yaml  test_100_gpt55_router_agentic.yaml  (+11 more)
docs/: .notes_pdf_header.tex  ADAPTIVE_PIPELINE.md  AGENTIC_RESULTS.md  AGENTIC_SOLVER.md  AUGMENTATION.md  COST_ESTIMATE.md  DATA_FORMATS_REFERENCE.md  DEVELOPMENT.md  EDGE_CASES.md  EVALUATION_AND_POSTPROCESSING.md  EVALUATION_PIPELINE.md  EVALUATION_STRATEGY_REVIEW.md  EVAL_MODE_GUIDE.md  FEATURES.md  LLM_INPUT_OUTPUT.md  METRICS_REFERENCE.md  POSTPROCESSING_FLOW.md  QUICKSTART.md  SUPERVISOR_PRESENTATION.md  agentic_report.tex  code_exec_report.tex  cost_estimation_report.md  fred_token_report.tex  methods_comparison.tex  pipeline-diagram.md  supervisor_slides.tex
examples/: formatter_examples.py
notebooks/: DATA_QUALITY.md  analyze_augmented.ipynb  evaluate_results.ipynb  explore_data.ipynb  explore_prompts.ipynb  prompt_design.ipynb
scripts/: analyze_edge_data.py  check_data_quality.py  convert_to_rpn.py  cost_estimate.py  generate_prompts.py  prepare_dataset.py  (+4 more)
(+258 files in other folders)
